<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.anything.SignupActivity$PlaceholderFragment" >

    <EditText
        android:id="@+id/reg_UserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:hint="@string/txtUname"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/reg_Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/reg_UserName"
        android:layout_alignRight="@+id/reg_UserName"
        android:layout_below="@+id/reg_UserName"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/txtEmail"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/reg_FullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/reg_Email"
        android:layout_below="@+id/reg_Email"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/txtfullname"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/reg_PhoneNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/reg_FullName"
        android:layout_alignRight="@+id/reg_FullName"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/txtPhoneno"
        android:inputType="phone" />

    <EditText
        android:id="@+id/reg_PassWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/reg_PhoneNo"
        android:layout_alignRight="@+id/reg_PhoneNo"
        android:layout_below="@+id/reg_PhoneNo"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/txtPassWord"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/reg_RePassWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/reg_PassWord"
        android:layout_alignRight="@+id/reg_PassWord"
        android:layout_below="@+id/reg_PassWord"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/txtrePassWord"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/signupBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/reg_RePassWord"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/reg_RePassWord"
        android:text="@string/signup" 
        android:onClick="signup"
        android:background="#418Bc8"
        android:textColor="@android:color/white" />

</RelativeLayout>
